# atricore-soc-auth0-events

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  a3c-soc-auth0-events.yaml  flake.nix  justfile  log4rs.yml  payloads-2.json  post.nu
encode-lib/: Cargo.toml
encode-lib/src/: lib.rs  log4rs.rs
src/: error.rs  main.rs  settings.rs
src/extractors/: auth.rs
src/scopes/: auth.rs  mod.rs
tests/: integration_test.rs  log4rs-test.yml  serde_test.rs
tests/common/: mod.rs
tests/data/: payload.json  payloads-pretty.json  payloads-tmp.json  payloads.json  settings-test-1.yml
