[package]
name = "atricore-soc-auth0-events"
version = "0.1.1"
edition = "2021"
authors = ["Sebastian Gonzalez <sgonzalez@atricor.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4.4"
actix-cors = "0.7"
serde_json = "1.0"
serde = "1.0"
config = "0.13.1"
clap = { version = "4.4", features = ["derive"] }
shellexpand = "3.0"
log = "0.4.20"
log4rs = { version = "1.2.0", features = ["rolling_file_appender", "background_rotation", "compound_policy", "size_trigger", "fixed_window_roller", "json_encoder"] }
derive_more = "0.99"
futures = "0.3"
futures-util = "0.3"
anyhow = "1.0"

[dependencies.a3c-soc-auth0-events-encode-lib]
path = "encode-lib"

[dev-dependencies]
tokio = { version = "1.35", features = ["macros", "test-util"] } 

[workspace]
members = [
    "encode-lib",
]
