[package]
name = "a3c-soc-auth0-events-encode-lib"
version = "0.1.0"
edition = "2021"
authors = ["Sebastian Gonzalez <sgonzalez@atricor.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = "1.0"
log = "0.4.20"
derive_more = "0.99"
futures = "0.3"

#[dependencies.a3c-soc-auth0-events-receiver-lib]
#path = "receiver-lib"

[dev-dependencies]
tokio = { version = "1.35", features = ["macros", "test-util"] } 
